# agentic-http

./: .gitignore  CLA.md  CONTRIBUTING.md  README.md
.github/workflows/: pages.yml
docs/: agentic-http-whitepaper.docx  agentic-http-whitepaper.md  index.html  spec.html  whitepaper.html
examples/: user-management.md
examples/live-api/: Dockerfile  index.js  package.json
implementations/express/: index.js  index.test.js  package.json
implementations/fastapi/: agentic_http.py  pyproject.toml  test_agentic_http.py
implementations/nestjs/: package.json  tsconfig.json
implementations/nestjs/src/: agentic-http.interceptor.ts  agentic-http.module.ts  agentic-http.spec.ts  agentic-meta.decorator.ts  index.ts  types.ts  well-known.controller.ts
spec/: README.md  schema.json
tools/openapi-to-agentic/: index.js  package.json
tools/validator/: index.js  package.json
